fix menu on mobile

--- a/src/components/TapMenu.css
+++ b/src/components/TapMenu.css
@@ -34,7 +34,6 @@
 @media screen and (max-width: 750px) {
   .TapMenu--Item {
     width: 100%;
-    max-width: 30rem;
   }
 }
 
